Bug 1752164: Don't fall back to our internal file protocol handler when macOS is prompting users to pick an app when opening a downloaded file. r=mstange,Gijs

Differential Revision: https://phabricator.services.mozilla.com/D199347