xpcom/io/CocoaFileUtils.mm
@@ -40,9 +40,9 @@ nsresult OpenURL(CFURLRef url) {
 
   nsAutoreleasePool localPool;
 
-  BOOL success = [[NSWorkspace sharedWorkspace] openURL:(NSURL*)url];
+  [[NSWorkspace sharedWorkspace] openURL:(NSURL*)url];
 
-  return (success ? NS_OK : NS_ERROR_FAILURE);
+  return NS_OK;
 
   NS_OBJC_END_TRY_BLOCK_RETURN(NS_ERROR_FAILURE);
 }
